fixed border problem on iOS

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -75,7 +75,7 @@ body {
   line-height: 1.4em;
   color: inherit;
   padding: 6px;
-  border: 1px solid #999;
+  // border: 1px solid #999;
   box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
@@ -93,7 +93,6 @@ body {
 .main {
   position: relative;
   z-index: 2;
-  border-top: 1px solid #e6e6e6;
 }
 
 .toggle-all {
@@ -217,10 +216,6 @@ body {
   .edit {
     background: #3a3b3c;
     color: #d9dbdf;
-  }
-
-  .main {
-    border-color: rgba(1,1,0,0.7);
   }
 
   .footer {
